@@ -25,14 +25,10 @@ import uk.gov.hmcts.reform.idam.client.models.UserDetails;
 
 import java.time.LocalDate;
 import java.util.ArrayList;
-import java.util.Collection;
 import java.util.Deque;
-import java.util.HashSet;
 import java.util.List;
-import java.util.stream.Stream;
 
-import static java.util.Collections.emptyList;
-import static java.util.stream.Collectors.toSet;
+import static java.util.stream.Collectors.toList;
 import static java.util.stream.Stream.concat;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.elasticsearch.index.query.QueryBuilders.boolQuery;
@@ -46,7 +42,6 @@ import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.doThrow;
 import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 import static org.springframework.test.util.ReflectionTestUtils.setField;
 import static uk.gov.hmcts.divorce.bulkaction.ccd.BulkActionState.Created;
@@ -62,7 +57,6 @@ import static uk.gov.hmcts.divorce.divorcecase.model.State.Submitted;
 import static uk.gov.hmcts.divorce.divorcecase.model.State.Withdrawn;
 import static uk.gov.hmcts.divorce.systemupdate.service.CcdSearchService.DUE_DATE;
 import static uk.gov.hmcts.divorce.systemupdate.service.CcdSearchService.STATE;
-import static uk.gov.hmcts.divorce.testutil.TestConstants.CASEWORKER_AUTH_TOKEN;
 import static uk.gov.hmcts.divorce.testutil.TestConstants.SERVICE_AUTHORIZATION;
 import static uk.gov.hmcts.divorce.testutil.TestConstants.SYSTEM_UPDATE_AUTH_TOKEN;
 import static uk.gov.hmcts.divorce.testutil.TestDataHelper.feignException;
@@ -96,8 +90,7 @@ class CcdSearchServiceTest {
         final User user = new User(SYSTEM_UPDATE_AUTH_TOKEN, UserDetails.builder().build());
         final int from = 0;
         final int pageSize = 100;
-        final SearchResult expected = SearchResult.builder().total(PAGE_SIZE)
-            .cases(createCaseDetailsList(PAGE_SIZE, 1L)).build();
+        final SearchResult expected = SearchResult.builder().total(PAGE_SIZE).cases(createCaseDetailsList(PAGE_SIZE)).build();
         final BoolQueryBuilder query = boolQuery()
             .must(matchQuery(STATE, AwaitingApplicant2Response))
             .filter(rangeQuery(DUE_DATE).lte(LocalDate.now()))
@@ -125,15 +118,12 @@ class CcdSearchServiceTest {
 
     @Test
     void shouldReturnAllCasesWithGivenState() {
-        final int totalCases = 101;
         final BoolQueryBuilder query = boolQuery()
             .must(matchQuery(STATE, Submitted))
             .filter(rangeQuery(DUE_DATE).lte(LocalDate.now()));
         final User user = new User(SYSTEM_UPDATE_AUTH_TOKEN, UserDetails.builder().build());
-        final SearchResult expected1 = SearchResult.builder().total(totalCases)
-            .cases(createCaseDetailsList(PAGE_SIZE, 1L)).build();
-        final SearchResult expected2 = SearchResult.builder().total(totalCases)
-            .cases(createCaseDetailsList(1, PAGE_SIZE + 1)).build();
+        final SearchResult expected1 = SearchResult.builder().total(PAGE_SIZE).cases(createCaseDetailsList(PAGE_SIZE)).build();
+        final SearchResult expected2 = SearchResult.builder().total(1).cases(createCaseDetailsList(1)).build();
 
         when(coreCaseDataApi.searchCases(
             SYSTEM_UPDATE_AUTH_TOKEN,
@@ -150,60 +140,18 @@ class CcdSearchServiceTest {
 
         final List<CaseDetails> searchResult = ccdSearchService.searchForAllCasesWithQuery(query, user, SERVICE_AUTHORIZATION, Submitted);
 
-        assertThat(searchResult.size()).isEqualTo(totalCases);
-    }
-
-    @Test
-    void shouldNotReturnDuplicateCases() {
-        final BoolQueryBuilder query = boolQuery()
-            .must(matchQuery(STATE, Submitted))
-            .filter(rangeQuery(DUE_DATE).lte(LocalDate.now()));
-        final User user = new User(SYSTEM_UPDATE_AUTH_TOKEN, UserDetails.builder().build());
-
-        final List<CaseDetails> caseDetailsList = createCaseDetailsList(PAGE_SIZE, 1L);
-        final List<CaseDetails> duplicateCasesDetailsList = createCaseDetailsList(PAGE_SIZE, 1L);
-
-        final SearchResult searchResult1 = SearchResult.builder().total(PAGE_SIZE)
-            .cases(caseDetailsList).build();
-        final SearchResult searchResult2 = SearchResult.builder().total(PAGE_SIZE)
-            .cases(duplicateCasesDetailsList).build();
-
-        when(coreCaseDataApi.searchCases(
-            SYSTEM_UPDATE_AUTH_TOKEN,
-            SERVICE_AUTHORIZATION,
-            CASE_TYPE,
-            getSourceBuilder(0, PAGE_SIZE).toString()))
-            .thenReturn(searchResult1);
-        when(coreCaseDataApi.searchCases(
-            SYSTEM_UPDATE_AUTH_TOKEN,
-            SERVICE_AUTHORIZATION,
-            CASE_TYPE,
-            getSourceBuilder(PAGE_SIZE, PAGE_SIZE).toString()))
-            .thenReturn(searchResult2);
-        when(coreCaseDataApi.searchCases(
-            SYSTEM_UPDATE_AUTH_TOKEN,
-            SERVICE_AUTHORIZATION,
-            CASE_TYPE,
-            getSourceBuilder(PAGE_SIZE * 2, PAGE_SIZE).toString()))
-            .thenReturn(SearchResult.builder().total(PAGE_SIZE)
-                .cases(emptyList()).build());
-
-        final List<CaseDetails> searchResult = ccdSearchService.searchForAllCasesWithQuery(query, user, SERVICE_AUTHORIZATION, Submitted);
-
-        assertThat(searchResult.size()).isEqualTo(100);
-        assertThat(searchResult).isEqualTo(new HashSet<>(caseDetailsList).stream().toList());
+        assertThat(searchResult.size()).isEqualTo(101);
     }
 
     @Test
     void shouldReturnAllCasesInHolding() {
-        final int totalCases = 101;
         final BoolQueryBuilder query = boolQuery()
             .must(matchQuery(STATE, Holding))
             .filter(rangeQuery(DUE_DATE).lte(LocalDate.now()));
 
         final User user = new User(SYSTEM_UPDATE_AUTH_TOKEN, UserDetails.builder().build());
-        final SearchResult expected1 = SearchResult.builder().total(totalCases).cases(createCaseDetailsList(PAGE_SIZE, 1L)).build();
-        final SearchResult expected2 = SearchResult.builder().total(totalCases).cases(createCaseDetailsList(1, PAGE_SIZE + 1)).build();
+        final SearchResult expected1 = SearchResult.builder().total(PAGE_SIZE).cases(createCaseDetailsList(PAGE_SIZE)).build();
+        final SearchResult expected2 = SearchResult.builder().total(1).cases(createCaseDetailsList(1)).build();
 
         SearchSourceBuilder sourceBuilder1 = SearchSourceBuilder
             .searchSource()
@@ -242,19 +190,16 @@ class CcdSearchServiceTest {
 
         final List<CaseDetails> searchResult = ccdSearchService.searchForAllCasesWithQuery(query, user, SERVICE_AUTHORIZATION, Holding);
 
-        assertThat(searchResult.size()).isEqualTo(totalCases);
+        assertThat(searchResult.size()).isEqualTo(101);
     }
 
     @Test
     void shouldReturnAllCasesWithGivenStateWhenFlagIsPassed() {
 
-        final int totalCases = 101;
         final User user = new User(SYSTEM_UPDATE_AUTH_TOKEN, UserDetails.builder().build());
         final int from = 0;
-        final SearchResult expected = SearchResult.builder().total(totalCases)
-            .cases(createCaseDetailsList(PAGE_SIZE, 1L)).build();
-        final SearchResult expected2 = SearchResult.builder().total(totalCases)
-            .cases(createCaseDetailsList(1, PAGE_SIZE + 1)).build();
+        final SearchResult expected = SearchResult.builder().total(PAGE_SIZE).cases(createCaseDetailsList(PAGE_SIZE)).build();
+        final SearchResult expected2 = SearchResult.builder().total(1).cases(createCaseDetailsList(1)).build();
         final BoolQueryBuilder query = boolQuery()
             .must(matchQuery("state", AwaitingApplicant2Response))
             .filter(rangeQuery(DUE_DATE).lte(LocalDate.now()))
@@ -291,15 +236,14 @@ class CcdSearchServiceTest {
         final List<CaseDetails> searchResult = ccdSearchService.searchForAllCasesWithQuery(
             query, user, SERVICE_AUTHORIZATION, AwaitingApplicant2Response);
 
-        assertThat(searchResult.size()).isEqualTo(totalCases);
+        assertThat(searchResult.size()).isEqualTo(101);
     }
 
     @Test
     void shouldReturnCasesWithVersionOlderThan() {
 
         final User user = new User(SYSTEM_UPDATE_AUTH_TOKEN, UserDetails.builder().build());
-        final SearchResult expected1 = SearchResult.builder().total(PAGE_SIZE)
-            .cases(createCaseDetailsList(PAGE_SIZE, 1L)).build();
+        final SearchResult expected1 = SearchResult.builder().total(PAGE_SIZE).cases(createCaseDetailsList(PAGE_SIZE)).build();
 
         SearchSourceBuilder sourceBuilder = SearchSourceBuilder
             .searchSource()
@@ -334,8 +278,7 @@ class CcdSearchServiceTest {
     void shouldReturnBulkCasesWithVersionOlderThan() {
 
         final User user = new User(SYSTEM_UPDATE_AUTH_TOKEN, UserDetails.builder().build());
-        final SearchResult expected1 = SearchResult.builder().total(PAGE_SIZE)
-            .cases(createCaseDetailsList(PAGE_SIZE, 1L)).build();
+        final SearchResult expected1 = SearchResult.builder().total(PAGE_SIZE).cases(createCaseDetailsList(PAGE_SIZE)).build();
 
         SearchSourceBuilder sourceBuilder = SearchSourceBuilder
             .searchSource()
@@ -390,11 +333,11 @@ class CcdSearchServiceTest {
 
         final User user = new User(SYSTEM_UPDATE_AUTH_TOKEN, UserDetails.builder().build());
         final SearchResult searchResult1 = SearchResult.builder().total(PAGE_SIZE)
-            .cases(createCaseDetailsList(PAGE_SIZE, 1L)).build();
+            .cases(createCaseDetailsList(PAGE_SIZE)).build();
         final SearchResult searchResult2 = SearchResult.builder().total(1)
-            .cases(createCaseDetailsList(1, PAGE_SIZE + 1)).build();
+            .cases(createCaseDetailsList(1)).build();
         final List<CaseDetails> expectedCases = concat(searchResult1.getCases().stream(), searchResult2.getCases().stream())
-            .collect(toSet()).stream().toList();
+            .collect(toList());
 
         when(coreCaseDataApi.searchCases(
             SYSTEM_UPDATE_AUTH_TOKEN,
@@ -408,8 +351,7 @@ class CcdSearchServiceTest {
             CASE_TYPE,
             searchSourceBuilderForAwaitingPronouncementCases(100).toString()))
             .thenReturn(searchResult2);
-        when(caseDetailsListConverter.convertToListOfValidCaseDetails(expectedCases))
-            .thenReturn(createConvertedCaseDetailsList(101, 1));
+        when(caseDetailsListConverter.convertToListOfValidCaseDetails(expectedCases)).thenReturn(createConvertedCaseDetailsList(101));
 
         final Deque<List<uk.gov.hmcts.ccd.sdk.api.CaseDetails<CaseData, State>>> allPages =
             ccdSearchService.searchAwaitingPronouncementCasesAllPages(user, SERVICE_AUTHORIZATION);
@@ -418,46 +360,6 @@ class CcdSearchServiceTest {
         assertThat(allPages.poll().size()).isEqualTo(BULK_LIST_MAX_PAGE_SIZE);
         assertThat(allPages.poll().size()).isEqualTo(BULK_LIST_MAX_PAGE_SIZE);
         assertThat(allPages.poll().size()).isEqualTo(1);
-    }
-
-    @Test
-    void shouldNotReturnDuplicateCasesInStateAwaitingPronouncement() {
-
-        final User user = new User(SYSTEM_UPDATE_AUTH_TOKEN, UserDetails.builder().build());
-        final SearchResult searchResult1 = SearchResult.builder().total(PAGE_SIZE)
-            .cases(createCaseDetailsList(PAGE_SIZE, 1L)).build();
-        final SearchResult searchResult2 = SearchResult.builder().total(1)
-            .cases(createCaseDetailsList(1, PAGE_SIZE + 1)).build();
-        final List<CaseDetails> expectedCases = concat(searchResult1.getCases().stream(), searchResult2.getCases().stream())
-            .collect(toSet()).stream().toList();
-        final List<uk.gov.hmcts.ccd.sdk.api.CaseDetails<CaseData, State>> caseDetailsList1 = createConvertedCaseDetailsList(50, 1);
-        final List<uk.gov.hmcts.ccd.sdk.api.CaseDetails<CaseData, State>> caseDetailsList2 = createConvertedCaseDetailsList(49, 51);
-        final List<uk.gov.hmcts.ccd.sdk.api.CaseDetails<CaseData, State>> caseDetailsList3 = createConvertedCaseDetailsList(1, 101);
-
-        when(coreCaseDataApi.searchCases(
-            SYSTEM_UPDATE_AUTH_TOKEN,
-            SERVICE_AUTHORIZATION,
-            CASE_TYPE,
-            searchSourceBuilderForAwaitingPronouncementCases(0).toString()))
-            .thenReturn(searchResult1);
-        when(coreCaseDataApi.searchCases(
-            SYSTEM_UPDATE_AUTH_TOKEN,
-            SERVICE_AUTHORIZATION,
-            CASE_TYPE,
-            searchSourceBuilderForAwaitingPronouncementCases(100).toString()))
-            .thenReturn(searchResult2);
-        when(caseDetailsListConverter.convertToListOfValidCaseDetails(expectedCases))
-            .thenReturn(Stream.of(caseDetailsList1, caseDetailsList2, caseDetailsList3)
-                .flatMap(Collection::stream)
-                .toList());
-
-        final Deque<List<uk.gov.hmcts.ccd.sdk.api.CaseDetails<CaseData, State>>> allPages =
-            ccdSearchService.searchAwaitingPronouncementCasesAllPages(user, SERVICE_AUTHORIZATION);
-
-        assertThat(allPages.size()).isEqualTo(2);
-        assertThat(allPages.poll()).isEqualTo(caseDetailsList1);
-        assertThat(allPages.poll()).isEqualTo(Stream.of(caseDetailsList2, caseDetailsList3).flatMap(Collection::stream).toList());
-        assertThat(allPages.poll()).isNull();
     }
 
     @Test
@@ -483,12 +385,11 @@ class CcdSearchServiceTest {
     @Test
     void shouldReturnAllCasesInStatePronouncedWithCasesInErrorListOrEmptyProcessedList() {
 
-        final int totalCases = 101;
         final User user = new User(SYSTEM_UPDATE_AUTH_TOKEN, UserDetails.builder().build());
-        final SearchResult expectedSearchResult1 = SearchResult.builder().total(totalCases)
-            .cases(createCaseDetailsList(PAGE_SIZE, 1L)).build();
-        final SearchResult expectedSearchResult2 = SearchResult.builder().total(totalCases)
-            .cases(createCaseDetailsList(1, PAGE_SIZE + 1)).build();
+        final SearchResult expectedSearchResult1 = SearchResult.builder().total(100)
+            .cases(createCaseDetailsList(100)).build();
+        final SearchResult expectedSearchResult2 = SearchResult.builder().total(1)
+            .cases(createCaseDetailsList(1)).build();
         final uk.gov.hmcts.ccd.sdk.api.CaseDetails<BulkActionCaseData, BulkActionState> bulkCaseDetails =
             mock(uk.gov.hmcts.ccd.sdk.api.CaseDetails.class);
 
@@ -510,7 +411,7 @@ class CcdSearchServiceTest {
         final List<uk.gov.hmcts.ccd.sdk.api.CaseDetails<BulkActionCaseData, BulkActionState>> searchResult = ccdSearchService
             .searchForUnprocessedOrErroredBulkCases(Pronounced, user, SERVICE_AUTHORIZATION);
 
-        assertThat(searchResult.size()).isEqualTo(totalCases);
+        assertThat(searchResult.size()).isEqualTo(101);
     }
 
     @Test
@@ -534,12 +435,11 @@ class CcdSearchServiceTest {
     @Test
     void shouldReturnAllCasesInStateCreatedOrListedWithCasesToBeRemoved() {
 
-        final int totalCases = 101;
         final User user = new User(SYSTEM_UPDATE_AUTH_TOKEN, UserDetails.builder().build());
-        final SearchResult expectedSearchResult1 = SearchResult.builder().total(totalCases)
-            .cases(createCaseDetailsList(PAGE_SIZE, 1L)).build();
-        final SearchResult expectedSearchResult2 = SearchResult.builder().total(totalCases)
-            .cases(createCaseDetailsList(1, PAGE_SIZE + 1)).build();
+        final SearchResult expectedSearchResult1 = SearchResult.builder().total(100)
+            .cases(createCaseDetailsList(100)).build();
+        final SearchResult expectedSearchResult2 = SearchResult.builder().total(1)
+            .cases(createCaseDetailsList(1)).build();
         final uk.gov.hmcts.ccd.sdk.api.CaseDetails<BulkActionCaseData, BulkActionState> bulkCaseDetails =
             mock(uk.gov.hmcts.ccd.sdk.api.CaseDetails.class);
 
@@ -561,7 +461,7 @@ class CcdSearchServiceTest {
         final List<uk.gov.hmcts.ccd.sdk.api.CaseDetails<BulkActionCaseData, BulkActionState>> searchResult = ccdSearchService
             .searchForCreatedOrListedBulkCasesWithCasesToBeRemoved(user, SERVICE_AUTHORIZATION);
 
-        assertThat(searchResult.size()).isEqualTo(totalCases);
+        assertThat(searchResult.size()).isEqualTo(101);
     }
 
     @Test
@@ -593,7 +493,7 @@ class CcdSearchServiceTest {
         final User user = new User(SYSTEM_UPDATE_AUTH_TOKEN, UserDetails.builder().build());
         final SearchResult expected = SearchResult.builder()
             .total(caseReferences.size())
-            .cases(createCaseDetailsList(caseReferences.size(), 1L))
+            .cases(createCaseDetailsList(caseReferences.size()))
             .build();
 
         SearchSourceBuilder sourceBuilder = SearchSourceBuilder
@@ -621,8 +521,7 @@ class CcdSearchServiceTest {
     void shouldReturnJointApplicationCasesContainingAccessCodePostIssueApplication() {
 
         final User user = new User(SYSTEM_UPDATE_AUTH_TOKEN, UserDetails.builder().build());
-        final SearchResult expected = SearchResult.builder().total(PAGE_SIZE)
-            .cases(createCaseDetailsList(PAGE_SIZE, 1L)).build();
+        final SearchResult expected = SearchResult.builder().total(PAGE_SIZE).cases(createCaseDetailsList(PAGE_SIZE)).build();
 
         final QueryBuilder issueDateExist = existsQuery("data.issueDate");
         final QueryBuilder jointApplication = matchQuery("data.applicationType", "jointApplication");
@@ -658,8 +557,7 @@ class CcdSearchServiceTest {
     void shouldReturnCasesInAwaitingAosWhereConfirmReadPetitionIsYes() {
 
         final User user = new User(SYSTEM_UPDATE_AUTH_TOKEN, UserDetails.builder().build());
-        final SearchResult expected = SearchResult.builder().total(PAGE_SIZE)
-            .cases(createCaseDetailsList(PAGE_SIZE, 1L)).build();
+        final SearchResult expected = SearchResult.builder().total(PAGE_SIZE).cases(createCaseDetailsList(PAGE_SIZE)).build();
 
         final QueryBuilder confirmReadPetitionYes = matchQuery("data.confirmReadPetition", YesOrNo.YES);
         final QueryBuilder awaitingAosState = matchQuery(STATE, AwaitingAos);
@@ -691,8 +589,7 @@ class CcdSearchServiceTest {
     void shouldReturnJointPaperApplicationsWhereApplicant2OfflineFlagShouldBeSet() {
 
         final User user = new User(SYSTEM_UPDATE_AUTH_TOKEN, UserDetails.builder().build());
-        final SearchResult expected = SearchResult.builder().total(PAGE_SIZE)
-            .cases(createCaseDetailsList(PAGE_SIZE, 1L)).build();
+        final SearchResult expected = SearchResult.builder().total(PAGE_SIZE).cases(createCaseDetailsList(PAGE_SIZE)).build();
 
         final QueryBuilder applicant2OfflineExist = existsQuery("data.applicant2Offline");
         final QueryBuilder jointApplication = matchQuery("data.applicationType", "jointApplication");
@@ -728,8 +625,7 @@ class CcdSearchServiceTest {
     void shouldReturnSolePaperApplicationsWhereApplicant2OfflineFlagShouldBeSet() {
 
         final User user = new User(SYSTEM_UPDATE_AUTH_TOKEN, UserDetails.builder().build());
-        final SearchResult expected = SearchResult.builder().total(PAGE_SIZE)
-            .cases(createCaseDetailsList(PAGE_SIZE, 1L)).build();
+        final SearchResult expected = SearchResult.builder().total(PAGE_SIZE).cases(createCaseDetailsList(PAGE_SIZE)).build();
 
         final QueryBuilder applicant2OfflineExist = existsQuery("data.applicant2Offline");
         final QueryBuilder soleApplication = matchQuery("data.applicationType", "soleApplication");
@@ -740,9 +636,7 @@ class CcdSearchServiceTest {
             .must(boolQuery().must(newPaperCase))
             .must(boolQuery().must(soleApplication))
             .must(boolQuery().mustNot(applicant2OfflineExist))
-            .must(boolQuery().mustNot(applicant2EmailExist))
-            .mustNot(matchQuery(STATE, Withdrawn))
-            .mustNot(matchQuery(STATE, Rejected));
+            .must(boolQuery().mustNot(applicant2EmailExist));
 
         final SearchSourceBuilder sourceBuilder = SearchSourceBuilder
             .searchSource()
@@ -763,59 +657,27 @@ class CcdSearchServiceTest {
         assertThat(searchResult.size()).isEqualTo(100);
     }
 
-    @Test
-    public void shouldReturnBulkCaseDetailsWithGivenCaseId() {
-        final User user = new User(CASEWORKER_AUTH_TOKEN, UserDetails.builder().id("123").build());
-
-        when(coreCaseDataApi.readForCaseWorker(
-            CASEWORKER_AUTH_TOKEN,
-            SERVICE_AUTHORIZATION,
-            user.getUserDetails().getId(),
-            BulkActionCaseTypeConfig.JURISDICTION,
-            BulkActionCaseTypeConfig.CASE_TYPE,
-            "1"
-        )).thenReturn(mock(CaseDetails.class));
-
-        uk.gov.hmcts.ccd.sdk.api.CaseDetails<BulkActionCaseData, BulkActionState> bulkCaseDetails
-            = new uk.gov.hmcts.ccd.sdk.api.CaseDetails<>();
-
-        when(caseDetailsConverter.convertToBulkActionCaseDetailsFromReformModel(any(CaseDetails.class)))
-            .thenReturn(bulkCaseDetails);
-
-        ccdSearchService.searchForBulkCaseById("1", user, SERVICE_AUTHORIZATION);
-
-        verify(coreCaseDataApi).readForCaseWorker(CASEWORKER_AUTH_TOKEN,
-            SERVICE_AUTHORIZATION,
-            user.getUserDetails().getId(),
-            BulkActionCaseTypeConfig.JURISDICTION,
-            BulkActionCaseTypeConfig.CASE_TYPE,
-            "1");
-    }
-
-    private List<CaseDetails> createCaseDetailsList(final int size, final long idStart) {
+    private List<CaseDetails> createCaseDetailsList(final int size) {
 
         final List<CaseDetails> caseDetails = new ArrayList<>();
 
         for (int index = 0; index < size; index++) {
-            caseDetails.add(CaseDetails.builder().id(idStart + index).build());
+            caseDetails.add(mock(CaseDetails.class));
         }
 
         return caseDetails;
     }
 
     @SuppressWarnings("unchecked")
-    private List<uk.gov.hmcts.ccd.sdk.api.CaseDetails<CaseData, State>> createConvertedCaseDetailsList(final int size,
-                                                                                                       final long idStart) {
+    private List<uk.gov.hmcts.ccd.sdk.api.CaseDetails<CaseData, State>> createConvertedCaseDetailsList(final int size) {
 
-        final List<uk.gov.hmcts.ccd.sdk.api.CaseDetails<CaseData, State>> caseDetailsList = new ArrayList<>();
+        final List<uk.gov.hmcts.ccd.sdk.api.CaseDetails<CaseData, State>> caseDetails = new ArrayList<>();
 
         for (int index = 0; index < size; index++) {
-            final uk.gov.hmcts.ccd.sdk.api.CaseDetails<CaseData, State> caseDetails = new uk.gov.hmcts.ccd.sdk.api.CaseDetails<>();
-            caseDetails.setId(idStart + index);
-            caseDetailsList.add(caseDetails);
+            caseDetails.add(mock(uk.gov.hmcts.ccd.sdk.api.CaseDetails.class));
         }
 
-        return caseDetailsList;
+        return caseDetails;
     }
 
     private SearchSourceBuilder getSourceBuilder(final int from, final int pageSize) {
@@ -847,17 +709,16 @@ class CcdSearchServiceTest {
 
     private SearchSourceBuilder searchSourceBuilderForPronouncedCasesWithCasesInError(final int from) {
         final QueryBuilder stateQuery = matchQuery(STATE, Pronounced);
+        final QueryBuilder bulkCaseDetailsExist = existsQuery("data.erroredCaseDetails");
         final QueryBuilder errorCasesExist = existsQuery("data.erroredCaseDetails");
         final QueryBuilder processedCases = existsQuery("data.processedCaseDetails");
 
         final QueryBuilder query = boolQuery()
             .must(stateQuery)
             .must(boolQuery()
-                .should(boolQuery()
-                    .must(boolQuery().mustNot(errorCasesExist))
-                    .must(boolQuery().mustNot(processedCases)))
-                .should(boolQuery()
-                    .must(boolQuery().must(errorCasesExist))));
+                .must(boolQuery().must(bulkCaseDetailsExist))
+                .should(boolQuery().must(errorCasesExist))
+                .should(boolQuery().mustNot(processedCases)));
 
         return SearchSourceBuilder
             .searchSource()
